--- a/src/Board.module.scss
+++ b/src/Board.module.scss
@@ -10,9 +10,27 @@
     text-align: center;
     font-family: sans-serif;
     font-size: 32px;
+    user-select: none;
+    position: relative;
+    z-index: 1;
 
     &.dark {
       background: #666;
+    }
+
+    &.active {
+      outline: 2px solid red;
+      z-index: 3;
+    }
+
+    &.validMove::before {
+      content: "•";
+      position: absolute;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-size: 128px;
+      color: rgba(184, 184, 184, 0.67);
     }
   }
 }
