--- a/src/Board.module.scss
+++ b/src/Board.module.scss
@@ -25,9 +25,9 @@
 
     &.validMove::before {
       content: "•";
+      pointer-events: none;
       position: absolute;
-      left: 0;
-      right: 0;
+      inset: 0;
       text-align: center;
       font-size: 128px;
       color: rgba(184, 184, 184, 0.67);
