--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap');
 
 .App {
+  padding-top: 3rem;
   max-width: 1100px;
   display: flex;
   flex-direction: column;
@@ -8,10 +9,75 @@
   align-items: center;
   margin: auto;
 
+  h1, h2, h3 {
+    font-family: 'PT Serif', serif;
+  }
+  p, a, button {
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  .playButtons {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      font-size: 1rem;
+    }
+  }
+
+  .ruleset {
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    max-width: calc(100vw - 2rem);
+    max-height: calc(100vh - 2rem);
+    background: #ffffff;
+    border-radius: 1rem;
+    //border: 1px solid #666666;
+    padding: 1rem;
+    overflow: scroll;
+    box-shadow: 0 .5rem 5rem #666666;
+
+    h1 {
+      max-width: calc(100% - 3rem);
+
+      & + p {
+        margin-bottom: 1rem;
+      }
+    }
+
+    h2, h3 {
+      font-size: 1rem;
+      margin-top: .5em;
+      margin-bottom: .3em;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      margin: .2em 0;
+    }
+
+    button {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      aspect-ratio: 1/1;
+      height: 2rem;
+      width: 2rem;
+      background: #ffffff;
+    }
+  }
+
   button {
     outline: none;
     border: 1px solid #666666;
-    border-radius: 3px;
+    border-radius: .25rem;
     background: none;
     padding: .2em .4em;
   }
