--- a/src/Board.module.scss
+++ b/src/Board.module.scss
@@ -6,10 +6,7 @@
 
   & > div {
     background: #AEAEAE;
-    line-height: 64px;
-    text-align: center;
     font-family: sans-serif;
-    font-size: 32px;
     user-select: none;
     position: relative;
     z-index: 1;
@@ -19,6 +16,25 @@
     img {
       width: 100%;
       height: 100%;
+      position: relative;
+      z-index: 2;
+    }
+
+    span {
+      position: absolute;
+      pointer-events: none;
+      user-select: none;
+      z-index: 1;
+
+      &.rowName {
+        right: 0;
+        top: 0;
+      }
+
+      &.colName {
+        left: 0;
+        bottom: 0;
+      }
     }
 
     &.dark {
