--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -75,6 +75,44 @@
     }
   }
 
+  .game {
+    .illness {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: .5rem;
+      margin-bottom: 1rem;
+      width: 100%;
+      max-width: 17rem;
+      & > div {
+
+        &:first-of-type {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          flex-direction: row;
+          gap: 1rem;
+          width: 100%;
+        }
+
+        &:last-of-type {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+          gap: .5rem;
+          div {
+            width: 20px;
+            height: 20px;
+            border-radius: 5px;
+            background: #666666;
+          }
+        }
+      }
+    }
+  }
+
   button, input {
     outline: none;
     border: 1px solid #666666;
