Added piece representations in ruleset

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -64,6 +64,11 @@
       margin: .2em 0;
     }
 
+    img {
+      image-rendering: pixelated;
+      width: 2rem;
+    }
+
     button {
       position: absolute;
       top: 1rem;
