--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -88,8 +88,14 @@
       flex-direction: column;
       gap: .5rem;
       margin-bottom: 1rem;
+      margin-top: 2rem;
       width: 100%;
       max-width: 17rem;
+
+      &:not(:first-of-type) {
+        margin-top: 0;
+      }
+
       & > div {
 
         &:first-of-type {
