--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,28 @@
   align-items: center;
   margin: auto;
 
+  .topBar {
+    h2 {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      margin-bottom: 1rem;
+
+      span {
+        display: block;
+        width: 2rem;
+        height: 2rem;
+        border-radius: .5rem;
+        border: 1px solid #666666;
+      }
+    }
+
+    p {
+      margin: .2rem 0;
+      padding: .2rem .5rem;
+    }
+  }
+
   h1, h2, h3 {
     font-family: 'PT Serif', serif;
   }
